about me changed

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         ❤️.<br>I like to create and contribute to open source projects. That helps me to learn a ton of
                         new
                         stuff, grow as a developer and support other open source projects.<br>I'm also learning Back-End
-                        Development and looking forward to be a Full Stack Web Developer.</p>
+                        Development and looking forward to be a Full Stack Web Developer.Currently Pursing MCA in Rathnavel Subramaniam (RVS) College of Arts and Science</p>
 
                 </div>
             </div>
